style (about): fix alignment of profiles

--- a/src/client/stylesheets/_about.scss
+++ b/src/client/stylesheets/_about.scss
@@ -41,6 +41,7 @@
   }
   .mate {
     display: inline-block;
+    vertical-align: top;
     width: 20vw;
     height: 55vh;
     margin: 1vh;
